--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>		
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To 连宝：Happy Valentine's Day~~</title>
+    <title>To 灰原哀（某某某）：Happy Valentine's Day~~</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="51bbw.cn">		
@@ -67,7 +67,7 @@ And I hope this works out<br>
 <br>
 (屏幕向右边滑滑→)<br>
 (点击图片切换下一张)<br>
------------------------Just for You, XT Lian<br>		
+-----------------------Just for You, Huiyuan ai<br>		
 </div>	
 
 
