--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>		
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To 灰原哀（某某某）：Happy Valentine's Day~~</title>
+    <title>To 灰原哀：Happy Valentine's Day~~</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="51bbw.cn">		
